[package]
name = "dolma"
version = "0.9.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dolma"
crate-type = ["cdylib"]

[dependencies]
ahash = { version = "0.8.1", features = ["runtime-rng"] }
aws-config = { version = "0.55.0"}
aws-sdk-s3 = "0.25.0"
byteorder = "1"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
jsonpath-rust = "0.3.0"
log = "0.4.17"
regex = "1.8.4"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rand = "0.8.4"
rayon = "1.7.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0"
threadpool = "1.8.1"
tokio = {version = "1.27.0", features = ["full"]}
tokio-util = "0.7.7"
unicode-segmentation = "1.7"
glob = "0.3.1"


# [target.'cfg(target_arch = "aarch64")'.dependencies]
# flate2 = "1.0.28"
