[project]
name = "dolma-classifiers"
version = "0.1.0"
description = "Toolkit for easy classification of data in Dolma format."
authors = [
    {name = "Luca Soldaini", email = "lucas@allenai.org" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "msgspec",
    "fsspec[s3]",
    "smart_open[s3]>=7.0.4",
    "tqdm",
    "torch",
    "transformers",
    "wandb",
    "jq",
    "dolma>=1.1.0",
]

[project.urls]
"Homepage" = "https://github.com/allenai/dolma/classsifiers"
"Repository" = "https://github.com/allenai/dolma"
"Bug Tracker" = "https://github.com/allenai/dolma/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dolma_classifiers = ["py.typed", "*.pyi"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "pytest>=5.2",
    "ipython>=8.4.0",
    "autopep8>=1.7.0",
    "flake8>=5.0",
    "ipdb>=0.13.0",
    "flake8-pyi>=22.8.1",
    "Flake8-pyproject>=1.1.0",
    "pytest-asyncio>=0.15.1",
    "pytest-cov>=2.12.1",
    "aioresponses>=0.7.2",
]
