[project]
name = "dolma-rust-components"
dynamic = ["version"]
description = "Rust components for Dolma - Toolkit for pre-processing LLM training data."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[[project.authors]]
name = "Allen Institute for Artificial Intelligence"
email = "contact@allenai.org"

[project.urls]
Homepage = "https://github.com/allenai/dolma"

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel",
    "maturin[patchelf]>=1.1,<2.0 ; platform_system=='Linux'",
    "maturin>=1.1,<2.0 ; platform_system!='Linux'",
]
build-backend = "maturin"


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]


[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
dolma-rust-components = ["py.typed", "data/*"]
