[package]
name = "fill-in-node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
glob = "0.3.2"
mj_io = "0.1.2"
rand = "0.9.0"
rayon = "1.10.0"
serde_json = "1.0.138"
zstd = "0.12"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-go = "0.21"