[package]
name = "filter-low-qual-repos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
zstd = "0.13.3"
walkdir = "2.5"
rayon = "1.10"
rand = "0.8"
indicatif = { version = "0.17", features = ["rayon"] }