[package]
name = "make-ordered"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
zstd = "0.13"
anyhow = "1.0"
rayon = "1.10.0"
walkdir = "2.4"
ahash = { version = "0.8.1", features = ["runtime-rng"] }
log = "0.4.17"
env_logger = "0.10.0"