[package]
name = "tree-fitter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
anyhow = "1.0"
zstd = "0.13"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-go = "0.21"
walkdir = "2.0"
regex = "1.0"
petgraph = "0.6"
dashmap = "5.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"